G1: Stack walking API can expose AS_NO_KEEPALIVE oops

XMLWordPrintable

    • gc
    • b32

        When the stack is walked and e.g. locals are turned into StackValues, it might be that said local was made a constant oop by the JIT. In such cases, it is read from the nmethod using ON_STRONG_OOP_REF | AS_NO_KEEPALIVE. However, these oops need to be kept alive when concurrent marking is ongoing.
        While I haven't seen crashes obviously linked to this yet, I don't think we should wait until we do, because it certainly will eventually.

              Assignee:
              Erik Österlund
              Reporter:
              Erik Österlund
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: