8235669: G1: Stack walking API can expose AS_NO_KEEPALIVE oops

Reviewed-by: kbarrett, tschatzl